<resources>
    <string name="app_name">ResistApp</string>
    <string name="resistapp">ResistApp</string>
    <string name="resistor">Resistor</string>
    <string name="bandauno">1</string>
    <string name="unobanda">Banda uno</string>
    <string name="dosbanda">Banda dos</string>
    <string name="mulbanda">Multip</string>
    <string name="tolbanda">Tolerancia</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="diez_cero">x10⁰</string>
    <string name="potencia_uno">x10¹</string>
    <string name="potencia_dos">x10²</string>
    <string name="potencia_tres">x10³</string>
    <string name="potencia_cuatro">x10⁴</string>
    <string name="potencia_cinco">x10⁵</string>
    <string name="potencia_seis">x10⁶</string>
    <string name="potencia_siete">x10⁷</string>
    <string name="potencia_ocho">x10⁸</string>
    <string name="potencia_nueve">x10⁹</string>
    <string name="masmenos_uno">±1%</string>
    <string name="masmenos_dos">±2%</string>
    <string name="masmenos_cinco">±5%</string>
    <string name="masmenos_unmedio">±0.5%</string>
    <string name="masmenos_uncuarto">±0.25%</string>
    <string name="masmenos_puntouno">±0.1%</string>
    <string name="masmenos_puntocerocinco">±0.05%</string>
    <string name="resistor_1">Resistor</string>
    <string name="borrar">Borrar</string>
</resources>