<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calcular_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="289dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titulo_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/pathway_gothic_one"
            android:gravity="center"
            android:text="@string/resistapp"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/resistor_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="150dp"
            android:contentDescription="@string/resistor"
            android:src="@drawable/descarga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo_textView" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resistor_img">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:backgroundTint="#FFFFFF">

                <TextView
                    android:id="@+id/uno_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/unobanda"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dos_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/dosbanda"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/mul_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/mulbanda"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tol_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/tolbanda"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF">

                <Button
                    android:id="@+id/cero_1button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:text="@string/cero"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/cero_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:text="@string/cero"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/ceroPotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:text="@string/diez_cero"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/uno_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#35290D"
                    android:text="@string/uno"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/uno_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#35290D"
                    android:text="@string/uno"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/unoPotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#35290D"
                    android:text="@string/potencia_uno"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/uno_tol_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#35290D"
                    android:text="@string/masmenos_uno"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/dos_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C51818"
                    android:text="@string/dos"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/dos_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C51818"
                    android:text="@string/dos"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/dosPotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C51818"
                    android:text="@string/potencia_dos"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/dos_tol_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C51818"
                    android:text="@string/masmenos_dos"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/tres_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FF5722"
                    android:text="@string/tres"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/tres_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FF5722"
                    android:text="@string/tres"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/tresPotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FF5722"
                    android:text="@string/potencia_tres"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cuatro_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFEB3B"
                    android:text="@string/cuatro" />

                <Button
                    android:id="@+id/cuatro_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFEB3B"
                    android:text="@string/cuatro" />

                <Button
                    android:id="@+id/cuatroPotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFEB3B"
                    android:text="@string/potencia_cuatro"
                    tools:text="@string/potencia_cuatro" />

                <Button
                    android:id="@+id/cinco_tol_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFEB3B"
                    android:text="@string/masmenos_cinco"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cinco_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/cinco"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/cinco_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/cinco"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/cincoPotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/potencia_cinco"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/puntocinco_tol_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/masmenos_unmedio"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/seis_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00BCD4"
                    android:text="@string/seis"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/seis_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00BCD4"
                    android:text="@string/seis"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/seisPotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00BCD4"
                    android:text="@string/potencia_seis"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/veinticinco_tol_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00BCD4"
                    android:text="@string/masmenos_uncuarto"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/siete_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#EC608F"
                    android:text="@string/siete"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/siete_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#EC608F"
                    android:text="@string/siete"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/sietePotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#EC608F"
                    android:text="@string/potencia_siete"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/puntouno_tol_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#EC608F"
                    android:text="@string/masmenos_puntouno"
                    android:textColor="#FFFFFF" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/ocho_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9F9595"
                    android:text="@string/ocho"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/ocho_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9F9595"
                    android:text="@string/ocho"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/ochoPotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9F9595"
                    android:text="@string/potencia_ocho"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/cerocinco_tol_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9F9595"
                    android:text="@string/masmenos_puntocerocinco"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/nueve_1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E6DDDD"
                    android:text="@string/nueve" />

                <Button
                    android:id="@+id/nueve_2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E6DDDD"
                    android:text="@string/nueve" />

                <Button
                    android:id="@+id/nuevePotencia_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E6DDDD"
                    android:text="@string/potencia_nueve" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/resistor_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resistor_img"
            app:layout_constraintTop_toBottomOf="@+id/titulo_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
